--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<header class="major">
-							<h2>Rin-san</h2>
+							<a href = "https://rin-lr.github.io/profile.github.io"><h2>Rin-san</h2></a>
 						</header>
 						<ul>
-							<li><a href="https://rin-lr.github.io/Main.github.io/">Homepage</a></li>
-							<li><a href="#">Messages</a></li>
+							<li><a href="https://rin-lr.github.io/main.github.io/">Homepage</a></li>
+							<li><a href="index.html">Messages</a></li>
 							<li><a href="#">Elements</a></li>
 							<li>
 								<span class="opener">Submenu</span>
@@ -94,14 +94,14 @@
 							<div class="name"> <h2>#Dia#</h2> </div>
 							<div class="Unfollow"> <h3>Unfollow</h3> </div>
 						</div>
-						<a href="#"><div class="message-icon"> <img src="https://image.flaticon.com/icons/svg/2983/2983757.svg" alt=""> </div></a>
+						<a href="https://rin-lr.github.io/Dia.github.io/"><div class="message-icon"> <img src="https://image.flaticon.com/icons/svg/2983/2983757.svg" alt=""> </div></a>
 						<div class="call"> <img src="https://image.flaticon.com/icons/svg/684/684812.svg" alt=""> </div>
 				</div>
 			</div>
 				<div class="one">
 					<div class="box">
 					<div class="MIRA">
-					<a href="#">	<div class="profile-pic"><img src="https://i.pinimg.com/564x/a8/55/32/a8553220bbf42f4c8b5a8e268e83292b.jpg" alt=""></div></a>
+					<a href="https://rin-lr.github.io/mira.github.io">	<div class="profile-pic"><img src="https://i.pinimg.com/564x/a8/55/32/a8553220bbf42f4c8b5a8e268e83292b.jpg" alt=""></div></a>
 					</div>
 							<div class="info-blok">
 								<div class="name"> <h2>XOXO<br>MIRA-chan</h2> </div>
