--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<a href="#"><div class="profile-pic"><img src="https://i.pinimg.com/564x/46/6a/1b/466a1b3646bd9d5f9be8df22c3dd2a7d.jpg" alt=""></div></a>
 				</div>
 						<div class="info-blok">
-							<div class="name"> <h2>#Dia#</h2> </div>
+							<div class="name"> <h2>>strong>#Dia#</strong></h2> </div>
 							<div class="Unfollow"> <h3>Unfollow</h3> </div>
 						</div>
 						<a href="https://rin-lr.github.io/Dia.github.io/"><div class="message-icon"> <img src="https://image.flaticon.com/icons/svg/2983/2983757.svg" alt=""> </div></a>
@@ -104,7 +104,7 @@
 					<a href="https://rin-lr.github.io/mira.github.io">	<div class="profile-pic"><img src="https://i.pinimg.com/564x/a8/55/32/a8553220bbf42f4c8b5a8e268e83292b.jpg" alt=""></div></a>
 					</div>
 							<div class="info-blok">
-								<div class="name"> <h2>XOXO<br>MIRA-chan</h2> </div>
+								<div class="name"> <h2><strong>XOXO<br>MIRA-chan</strong></h2> </div>
 								<div class="Unfollow"> <h3>Unfollow</h3> </div>
 							</div>
 								<a href="#"><div class="message-icon"> <img src="https://image.flaticon.com/icons/svg/2983/2983757.svg" alt=""> </div></a>
