--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 			<div class="one">
 				<div class="box">
 				<div class="MIRA">
-					<a href="#"><div class="profile-pic"><img src="https://i.pinimg.com/564x/46/6a/1b/466a1b3646bd9d5f9be8df22c3dd2a7d.jpg" alt=""></div></a>
+					<a href="https://rin-lr.github.io/Dia.github.io/"><div class="profile-pic"><img src="https://i.pinimg.com/564x/46/6a/1b/466a1b3646bd9d5f9be8df22c3dd2a7d.jpg" alt=""></div></a>
 				</div>
 						<div class="info-blok">
 							<div class="name"> <h2>>strong>#Dia#</strong></h2> </div>
 							<div class="Unfollow"> <h3>Unfollow</h3> </div>
 						</div>
-						<a href="https://rin-lr.github.io/Dia.github.io/"><div class="message-icon"> <img src="https://image.flaticon.com/icons/svg/2983/2983757.svg" alt=""> </div></a>
+						<a href="#"><div class="message-icon"> <img src="https://image.flaticon.com/icons/svg/2983/2983757.svg" alt=""> </div></a>
 						<div class="call"> <img src="https://image.flaticon.com/icons/svg/684/684812.svg" alt=""> </div>
 				</div>
 			</div>
